fix layout issue with action links

--- a/scss/components/_action-links.scss
+++ b/scss/components/_action-links.scss
@@ -1,8 +1,10 @@
 .action-links {
+  display: flex;
   margin: ($spacing-large * 2) 0;
   padding: 0;
 
   li {
+    margin-right: $spacing-small;
     list-style: none;
   }
 }
